# outlook-mcp

./: .gitignore  README.md  pyproject.toml  setup.py
.claude-plugin/: plugin.json
.github/workflows/: ci.yaml
docs/superpowers/plans/: 2026-07-06-outlook-mcp-rs.md  2026-07-06-rust-port-implementation.md  2026-07-07-outlook-mcp-v2-plan-01-foundations.md  2026-07-07-outlook-mcp-v2-plan-02-email-finder.md  2026-07-07-outlook-mcp-v2-plan-03-compose-attachments.md  2026-07-07-outlook-mcp-v2-plan-04-meeting-aware-get-email.md  2026-07-07-outlook-mcp-v2-plan-05-update-email.md  2026-07-07-outlook-mcp-v2-plan-06-calendar-finder.md  2026-07-07-outlook-mcp-v2-plan-07-create-event-enhancements.md  2026-07-07-outlook-mcp-v2-plan-08-update-delete-event.md  2026-07-07-outlook-mcp-v2-plan-09-recurrence.md  2026-07-07-outlook-mcp-v2-plan-10-check-availability.md  2026-07-07-outlook-mcp-v2-plan-11-tasks-crud.md  2026-07-07-outlook-mcp-v2-plan-12-notes-crud.md  2026-07-07-outlook-mcp-v2-plans-index.md  2026-07-17-outlook-mcp-v2-python-plan-01-foundations.md  2026-07-17-outlook-mcp-v2-python-plan-02-email-finder.md  2026-07-17-outlook-mcp-v2-python-plan-03-compose-attachments.md  2026-07-17-outlook-mcp-v2-python-plan-04-meeting-aware-get-email.md  2026-07-17-outlook-mcp-v2-python-plan-05-update-email.md  V2-RESUME-PYTHON.md  V2-RESUME.md
outlook_mcp/: __init__.py  __main__.py  constants.py  errors.py  friendly.py  server.py
outlook_mcp/outlook/: base.py  client.py
tests/: conftest.py  test_client_pure.py  test_friendly.py  test_live.py  test_registry.py  test_tools.py
(+2 files in other folders)
