[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "outlook-mcp-com"
version = "0.1.0"
description = "MCP server controlling Microsoft Outlook desktop via the Win32 COM API"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Adam Kopelman" }]
keywords = ["mcp", "outlook", "windows", "com", "pywin32", "model-context-protocol"]
urls = { Homepage = "https://github.com/adamkopelman/outlook-mcp", Repository = "https://github.com/adamkopelman/outlook-mcp" }
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mcp>=1.2",
    'pywin32>=306; sys_platform == "win32"',
]

[project.scripts]
outlook-mcp = "outlook_mcp.server:main"

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
include = ["outlook_mcp*"]
